# Infinite_Runner_OpenGL

./: .gitignore  2  CMakeLists.txt  Makefile  README.md  install.bash
.cache/clangd/index/: camera.h.CDDB324947BC6BD4.idx  game.cpp.CD33E895D173BD61.idx  game.h.5D318DECD61BF8ED.idx  game_object.h.78F774D0E08E8E12.idx  glad.c.0934EF2B5740F9D4.idx  program.cpp.89B1BC185EAB3F2D.idx  renderer.h.CB4AAE6847D7CC3C.idx  resource_manager.h.198315373B590578.idx  shader.h.3C9371BD24AFFF5E.idx  shader_m.h.A25028891C29065D.idx
src/: CMakeLists.txt  Makefile  game.cpp  glad.c  hello_triangle.cpp  program.cpp  renderer.cpp  resource_manager.cpp
src/include/: camera.h  game.h  game_object.h  renderer.h  resource_manager.h  shader.h  shader_m.h
src/shaders/: floor.fs
